[package]
name = "luuma-api"
version = "0.1.0"
edition = "2021"
authors = ["Timo Weiss"]

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }

[dev-dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.39.1", features = ["full"] }
